<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pool_results"
            android:id="@+id/lblPoolResults"
            android:textColor="@android:color/black"
            android:textStyle="italic" />
    </TableRow>

    <ListView
        android:layout_width="176dp"
        android:layout_height="381dp"
        android:id="@+id/listPoolResults"
        android:focusable="true"
        android:layout_weight="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/direct_elimination"
            android:id="@+id/btnStartDEs"
            android:onClick="startDEs" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done"
            android:id="@+id/bthPRFinish"
            android:onClick="returnToHome" />
    </TableRow>
</TableLayout>